# lua-structured-fuzz-reduced

./: .gitignore  CMakeLists.txt  Progress.pptx  Proposal.pptx  README.md  clear_corpus.sh  filter.c  filter.sh  fuzz_llex.cc  fuzz_lparse.cc  fuzz_lparse_custom_mutation.cc  initial_seed.lua  mutate.lua  run_diff_testing.sh  run_fuzz.sh  run_fuzz_lexer.sh  run_fuzz_parse.sh  run_fuzz_parser_custom_mutation.sh  setup.sh
corpus/: collect_info.sh  collect_info_parser.sh  info.txt  iter.sh  iter_sample.sh  out_lua.txt  run_lua.go
diff_tesing/: collect_info.sh
src/: llex_helper.c
